--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,17 @@
-table{height:300px;width:300px;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}table tr{height:33%}table tr td{width:33%;text-align:center}
+body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:14px;line-height:1.428571429;color:#333;background-color:#fff}
+table{height:300px;width:300px;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}table tr{height:33.33333333333333%}table tr td{position:relative;width:33.33333333333333%;text-align:center;border:2px solid #1d7373}
+.container{padding:5px;width:500px;height:300px}.container .row .col-1{float:left;width:8.333333333333332%;height:300px}
+.container .row .col-2{float:left;width:16.666666666666664%;height:300px}
+.container .row .col-3{float:left;width:25%;height:300px}
+.container .row .col-4{float:left;width:33.33333333333333%;height:300px}
+.container .row .col-5{float:left;width:41.66666666666667%;height:300px}
+.container .row .col-6{float:left;width:50%;height:300px}
+.container .row .col-7{float:left;width:58.333333333333336%;height:300px}
+.container .row .col-8{float:left;width:6.66666666666666%;height:300px}
+.container .row .col-9{float:left;width:75%;height:300px}
+.container .row .col-10{float:left;width:83.33333333333334%;height:300px}
+.container .row .col-11{float:left;width:91.66666666666666%;height:300px}
+.container .row .col-12{float:left;width:100%;height:300px}
+.container .row .ui-controls{position:relative;height:300px}.container .row .ui-controls .search-buttons{position:absolute;width:75%;right:2px;bottom:2px}.container .row .ui-controls .search-buttons input{width:100%}
+.container .row .ui-controls .move-list{position:absolute;width:75%;right:2px;top:2px;height:70%;background-color:#17becf;text-align:center;overflow-y:scroll}.container .row .ui-controls .move-list h1{font-size:1em;color:#025258}
+.container .row .ui-controls .move-list p{font-size:.875em;color:#077c87}
