--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,6 @@ table{height:300px;width:300px;-webkit-user-select:none;-khtml-user-select:none;
 .container .row .col-10{float:left;width:83.33333333333334%;height:300px}
 .container .row .col-11{float:left;width:91.66666666666666%;height:300px}
 .container .row .col-12{float:left;width:100%;height:300px}
-.container .row .ui-controls{position:relative;height:300px}.container .row .ui-controls .search-buttons{position:absolute;width:75%;right:2px;bottom:2px}.container .row .ui-controls .search-buttons input{width:100%}
-.container .row .ui-controls .move-list{position:absolute;width:75%;right:2px;top:2px;height:70%;background-color:#17becf;text-align:center;overflow-y:scroll}.container .row .ui-controls .move-list h1{font-size:1em;color:#025258}
+.container .row .ui-controls{position:relative;height:300px}.container .row .ui-controls .search-buttons{position:absolute;width:75%;right:2px;bottom:0}.container .row .ui-controls .search-buttons input{width:100%}
+.container .row .ui-controls .move-list{position:absolute;width:75%;right:2px;top:2px;height:64%;background-color:#17becf;text-align:center;overflow-y:scroll}.container .row .ui-controls .move-list h1{font-size:1em;color:#025258}
 .container .row .ui-controls .move-list p{font-size:.875em;color:#077c87}
